<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/setting_trans_transaction_trace"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_trace_edit"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_transaction_print"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/setting_trans_print_spinner"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:text="@string/setting_trans_transaction_tpdu"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_tupu_edit"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_transaction_exit_time"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/setting_trans_exit_time"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:text="@string/setting_trans_wait_user_time"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/setting_trans_wait_user_time"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:paddingLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/setting_trans_transaction_batch"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_batch_edit"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_transaction_max"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_mac_edit"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_transaction_firm"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_firm_edit"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_track_encrypt_switch"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/setting_trans_track_encrypt"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />

                <TextView
                    android:text="@string/setting_trans_reversal_count"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/setting_trans_reversal_count"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="3"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/amount_edittext_selector"
                    android:layout_width="150dp"
                    android:layout_height="35dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <include
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/setting_frag_bottom"/>
    </RelativeLayout>
</LinearLayout>